feat: update UI text for clarity and improve accessibility

--- a/index.html
+++ b/index.html
@@ -2,9 +2,32 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/message-square-lock.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>enigma-simulator</title>
+    <title>Enigma Simulator</title>
+
+    <!-- SEO Meta Tags -->
+    <meta
+      name="description"
+      content="An online Enigma machine simulator. Encrypt and decrypt messages using configurable rotors, reflectors, and plugboard settings."
+    />
+    <meta name="keywords" content="Enigma Simulator, Enigma Machine" />
+    <meta name="author" content="ziteh" />
+
+    <!-- Open Graph -->
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="Online Enigma Simulator" />
+    <meta
+      property="og:description"
+      content="An online Enigma machine simulator. Encrypt and decrypt messages using configurable rotors, reflectors, and plugboard settings."
+    />
+
+    <!-- Twitter -->
+    <meta property="twitter:title" content="Online Enigma Simulator" />
+    <meta
+      property="twitter:description"
+      content="An online Enigma machine simulator. Encrypt and decrypt messages using configurable rotors, reflectors, and plugboard settings."
+    />
   </head>
   <body>
     <div id="root"></div>
